--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
    <body>
      <nav>
        <ul>
-         <li><a href="">Blog</a></li>
-         <li><a href="">Media</a></li>
-         <li><a href="">About</a></li>
+         <li><a href="blog">Blog</a></li>
+         <li><a href="media">Media</a></li>
+         <li><a href="about">About</a></li>
        </ul>
      </nav>
      <header>
@@ -50,7 +50,7 @@ Chicago is a leader in reforming public schools, enhancing public safety and sec
          <audio src="https://codecademy-content.s3.amazonaws.com/courses/Semantic+HTML/nyc-sounds.mov" controls></audio>
        </section>
      </main>
-     <footer>
+     <footer id="about">
        <p>Posted By: Mohammad Jihad Uddin</p>
        <p>Contact Information: example@gmail.com</p>
      </footer>
