Update HTML File
The navigation links were not properly linked to their ID's within the same HTML file due to a lack of the # symbol. I have added this symbol correcting this issue.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
    <head>
       <link rel="stylesheet" href="style.css">
+      <title>Chicago - My Hometown</title>
    </head>
    <body>
      <nav>
        <ul>
-         <li><a href="blog">Blog</a></li>
-         <li><a href="media">Media</a></li>
-         <li><a href="about">About</a></li>
+         <li><a href="#blog">Blog</a></li>
+         <li><a href="#media">Media</a></li>
+         <li><a href="#about">About</a></li>
        </ul>
      </nav>
      <header>
